k8s/services/server/overlays/staging/patches/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-server
  labels:
    app: ml-server
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mlops-container
          image: igorsantarek/ml_server:0.8.2-0010-g2742f64
