k8s/services/server/overlays/staging/patches/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-server-route
  namespace: mlops-project
spec:
  hostnames:
  - ml-server-staging
